views: register ShellCrApplication in views content clients

Not doing this causes a DCHECK failure at startup (issue 917698) but also causes
the Chrome message loop not to interoperate properly with the native message
loop.

Bug: 917698
Change-Id: Ife2e789a2eb8679bc32bc5b8349fef1dbebb0c80
Reviewed-on: https://chromium-review.googlesource.com/c/1432652
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Auto-Submit: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#625709}