ui/views_content_client/views_content_client_main_parts.cc
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <utility>
 
 #include "base/run_loop.h"
+#include "build/build_config.h"
 #include "content/public/browser/context_factory.h"
 #include "content/shell/browser/shell_browser_context.h"
 #include "ui/base/ime/input_method_initializer.h"
@@ -25,6 +26,10 @@ ViewsContentClientMainParts::ViewsContentClientMainParts(
 
 ViewsContentClientMainParts::~ViewsContentClientMainParts() {
 }
+
+#if !defined(OS_MACOSX)
+void ViewsContentClientMainParts::PreCreateMainMessageLoop() {}
+#endif
 
 void ViewsContentClientMainParts::PreMainMessageLoopRun() {
   ui::MaterialDesignController::Initialize();
