ui/views_content_client/views_content_client_main_parts.h
@@ -35,6 +35,9 @@ class ViewsContentClientMainParts : public content::BrowserMainParts {
       const content::MainFunctionParams& content_params,
       ViewsContentClient* views_content_client);
 
+  // Invoked before the BrowserMainLoop constructor.
+  static void PreCreateMainMessageLoop();
+
   ~ViewsContentClientMainParts() override;
 
   // content::BrowserMainParts:
