ui/views_content_client/views_content_main_delegate.h
@@ -25,6 +25,7 @@ class ViewsContentMainDelegate : public content::ContentMainDelegate {
   // content::ContentMainDelegate implementation
   bool BasicStartupComplete(int* exit_code) override;
   void PreSandboxStartup() override;
+  void PreCreateMainMessageLoop() override;
   content::ContentBrowserClient* CreateContentBrowserClient() override;
 
  private:
